--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "@google-cloud/speech": "^4.10.2",
     "@google-cloud/storage": "^6.4.0",
@@ -6,5 +9,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
